Style changes, consistency across elements.

--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -6,12 +6,12 @@
   font-style: normal;
 }
 :root {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
   :root {
-    font-size: calc(14px + (18 - 14) * ((100vw - 768px) / (991 - 768)));
+    font-size: calc(16px + (18 - 16) * ((100vw - 768px) / (991 - 768)));
   }
 }
 @media (min-width: 991px) {
@@ -21,30 +21,6 @@
 }
 html {
   font-size: 1em;
-}
-
-body {
-  font-family: "Noto Sans JP", sans-serif;
-  font-weight: 400;
-  line-height: 1.45;
-  color: black;
-}
-
-p {
-  margin-bottom: 1.2em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "franchise_freebold", sans-serif;
-  color: black;
-  font-weight: inherit;
-  line-height: 1.2;
-  letter-spacing: 0.1em;
 }
 
 /* Default Styles - Global */
@@ -71,7 +47,7 @@ body {
 
 body {
   background: white;
-  color: black;
+  color: #231f20;
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 400;
   line-height: 1.6;
@@ -80,14 +56,78 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #231f20;
+}
+
+p {
+  margin-bottom: 1.2em;
+  margin-top: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "franchise_freebold", sans-serif;
+  color: #231f20;
+  font-weight: inherit;
+  line-height: 1.2;
+  letter-spacing: 0.1em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "franchise_freebold", sans-serif;
+  color: #231f20;
+  font-weight: inherit;
+  line-height: 1.2;
+  letter-spacing: 0.1em;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.414em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: 0.8em;
+}
+
+small,
+.font_small {
+  font-size: 0.707em;
+}
+
 img {
   width: 100%;
   height: auto;
   display: block;
-}
-
-p {
-  margin-top: 1rem;
 }
 
 a {
@@ -100,22 +140,42 @@ a:hover {
 }
 
 section {
+  padding-top: 2rem;
+  padding-bottom: 4rem;
   width: 100%;
-  background: pink;
+}
+section:first-of-type {
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+}
+section:nth-child(even) {
+  background: #f0f0f0;
+}
+section:nth-child(even):last-of-type {
+  margin-bottom: 0;
+}
+section:last-of-type {
+  margin-bottom: 2rem;
 }
 
-.container, .container-wide {
+.heroWidget + section {
+  background: #f0f0f0 !important;
+}
+
+.container,
+.container-wide {
   margin: auto;
   width: 100%;
   display: grid;
-  grid-template-columns: minmax(1rem, 1fr) minmax(auto, 1200px) minmax(1rem, 1fr);
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 1200px) minmax(2rem, 1fr);
 }
-.container > *, .container-wide > * {
+.container > *,
+.container-wide > * {
   grid-column: 2/3;
 }
 
 .container {
-  grid-template-columns: minmax(1rem, 1fr) minmax(auto, 45ch) minmax(1rem, 1fr);
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 45ch) minmax(2rem, 1fr);
 }
 
 .text-required {
@@ -124,6 +184,71 @@ section {
 
 .span {
   grid-column: 1/-1 !important;
+}
+
+.element__title {
+  text-align: center;
+}
+
+.btn {
+  font-size: inherit;
+  display: inline-block;
+  background: #7ecdc9;
+  padding: 0.5em 1em;
+  border: solid 1px #cccccc;
+  border-radius: 4px;
+  color: white;
+  z-index: 101;
+  box-shadow: none;
+  transition: all ease-in-out 125ms;
+  text-decoration: none;
+}
+.btn:hover {
+  color: #e23d18;
+  background: #40a5a0;
+  cursor: pointer;
+  box-shadow: 2px 2px 15px rgba(35, 31, 32, 0.15);
+}
+
+.btn-cta {
+  font-size: 1.25rem;
+  color: #231f20;
+  font-weight: 500;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  color: white;
+  border-radius: 8px;
+  box-shadow: 1px 3px 5px rgba(35, 31, 32, 0.3);
+  padding: 0.25em 0.75em;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  min-width: 10ch;
+  min-height: 2.5rem;
+  text-align: center;
+  line-height: 1.1;
+  transition: 220ms all ease-in-out;
+}
+.btn-cta:hover, .btn-cta:active {
+  background-color: #98d7d4;
+}
+.btn-cta:focus {
+  outline-style: dashed;
+  outline-color: transparent;
+  box-shadow: 0 0 0 4px #bfe6e4;
+}
+
+.btn-link {
+  color: #4d4d4d;
+  text-align: right;
+  font-size: 0.9rem;
+  font-weight: 300;
+  text-decoration: none;
+  font-style: italic;
+}
+
+#insta-feed .container-wide {
+  margin-top: 2rem;
 }
 
 .toggle {
@@ -270,7 +395,6 @@ header img {
 .footer {
   background: #7ecdc9;
   margin-top: auto;
-  padding-top: 1rem;
   text-align: center;
   position: relative;
   font-size: 0.9rem;
@@ -282,8 +406,8 @@ header img {
 }
 
 .footer1 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
@@ -321,7 +445,286 @@ header img {
 .footer2 p {
   margin: 0;
   font-size: 0.8rem;
+  font-weight: 300;
+}
+
+.hero {
+  --hero-height: 65vh;
+  height: min(var(--hero-height), 1080px);
+  position: relative;
+  z-index: 100;
+}
+.hero__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 101;
+}
+.hero__content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  width: 60ch;
+  max-width: 50%;
+  z-index: 102;
+}
+.hero__content-title {
+  color: white;
+}
+.hero__image {
+  width: 100vw;
+  height: min(var(--hero-height), 1080px);
+}
+.hero__image img {
+  width: 100vw;
+  height: min(var(--hero-height), 1080px);
+  object-fit: cover;
+  z-index: 100;
+}
+
+.contact-form {
+  margin-top: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact-form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+::placeholder {
+  color: rgba(var(--clr-grey-dark-rgb), 0.75);
+}
+
+.input-group {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: baseline;
+}
+
+/* Add styles to 'label' selector */
+label {
+  font-size: 1.2em;
+  margin-top: 1rem;
+}
+
+/* Add styles to 'input' and 'textarea' selectors */
+input[type=text],
+input[type=email],
+input[type=tel],
+input[type=int],
+input[type=date],
+fieldset,
+textarea {
+  background-color: white;
+  width: 100%;
+  padding: 0.75em 1em;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  grid-column: 2/3;
+  font-size: 1rem;
+  transition: all 125ms ease-in-out;
+}
+
+input[type=date] {
+  font-size: 0.9rem;
+  font-family: "Open Sans", sans-serif;
+  letter-spacing: 2px;
+}
+
+fieldset .title {
+  font-size: 1.2rem;
+  background: #cccccc;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+/* Add styles to show 'focus' of selector */
+input[type=text]:focus,
+input[type=email]:focus,
+textarea:focus {
+  border: 2px dashed rgba(226, 61, 24, 0.5);
+  outline: none;
+}
+
+.imageElement {
+  padding-top: 2rem;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  --margin: 1rem;
+  --modifier: calc(54rem - 100%);
+  margin: calc(var(--margin) * -1);
+}
+.imageElement > * {
+  flex-grow: 1;
+  flex-basis: calc(var(--modifier) * 999);
+  margin: var(--margin);
+}
+.imageElement p {
+  margin-top: 0;
+}
+
+.reviewGrid {
+  margin-top: 2rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.reviewGrid .review {
+  padding-right: 3rem;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
+  text-align: center;
+  flex: 1;
+  flex-basis: 350px;
+  max-width: 350px;
+}
+.reviewGrid .review__content {
+  font-weight: 300;
+}
+.reviewGrid .review__author {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #0d773d;
+}
+
+/* Menu 
+    Menu Grid 
+*/
+@media screen and (min-width: 768px) {
+  .menus-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+
+.menu-wrapper {
+  width: 100%;
+  margin-top: 2rem;
+  display: grid;
+  gap: 1em;
+  grid-template-rows: auto;
+}
+@media screen and (min-width: 768px) {
+  .menu-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.menu-wrapper .pie-box,
+.menu-wrapper .sides-box,
+.menu-wrapper .sausage-box,
+.menu-wrapper .puds-box,
+.menu-wrapper .takeaway-box {
+  border-radius: 4px;
+  background: white;
+  border: solid 1px rgba(204, 204, 204, 0.5);
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .menu-wrapper {
+    margin-top: 1rem;
+  }
+}
+.menu-wrapper:first-of-type {
+  margin-top: 0;
+}
+@media screen and (min-width: 768px) {
+  .menu-wrapper:first-of-type {
+    margin-top: 1rem;
+  }
+}
+
+.menu-date {
+  margin-top: 2rem;
+}
+
+.menu-title {
+  padding: 0.5rem 2rem;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background: #e23d18;
+  color: white;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.menu-items {
+  display: flex;
+  flex-flow: row nowrap;
   font-weight: 400;
+  font-size: 0.9rem;
+}
+
+.menu-item {
+  padding: 0.4rem;
+  line-height: 1.2;
+}
+
+.menu-item-title {
+  flex: 1.2;
+  text-align: left;
+  font-weight: 700;
+}
+
+.menu-item-description {
+  flex: 4;
+  text-align: left;
+}
+
+.menu-item-price {
+  flex: 0.75;
+  font-style: italic;
+  text-align: right;
+}
+
+.sold-out {
+  text-decoration: line-through;
+  color: #e23d18;
+}
+
+.menuBlurb p {
+  font-size: 1.4rem;
+}
+
+.sidebar-box {
+  max-height: 400px;
+  position: relative;
+  overflow: hidden;
+}
+
+.sidebar-box .read-more {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0;
+  /* "transparent" only works here because == rgba(0,0,0,0) */
+  background-image: linear-gradient(to bottom, transparent, #231f20);
+}
+
+.menu-text {
+  padding: 0.5em 0.75em;
+  background: #f0f0f0;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  line-height: 1.6;
 }
 
 /*# sourceMappingURL=main.css.map */
