--- a/structure/templates/elements/review/review.html
+++ b/structure/templates/elements/review/review.html
@@ -1,8 +1,7 @@
 {# Review Element #}
 
-
 <div class="review">
-     <div class="reviews__content"> {{ element.content }}</div>
+     <div class="review__content"> {{ element.content }}</div>
 
-     <div class="reviews__author"> {{ element.title }}</div>
+     <div class="review__author"> {{ element.title }}</div>
 </div>
