--- a/structure/templates/pages/collections/menus/currentMenus.html
+++ b/structure/templates/pages/collections/menus/currentMenus.html
@@ -3,77 +3,82 @@
 
 {% block body %}
 
-<div class="container">
-  
-    <section>
-      <h1 class="page-title">Daily Menus</h1>
-      {# Menu page boilerplate intro text #}
-      <div class="menuBlurb"> {{ getBlockElementsHtml(page.blocks.menuText) }}</div>
-    </section>
-  
-    <section>
-      {# Start menu loop #}
- 
-      {# TODO: Convert to Twig Macro and reuse for dailyMenu.html and currentMenu.html templates #}
-  
-      <div class="menus-wrapper">
-        {% for menu in getActiveMenus(9) %}
-        <div class="menu-wrapper" id="">
-          <h3 class="menu-date span"> {{ menu.settings.pitchDate|date('j F Y') }} at {{ menu.settings.pitchLocation }} </h3>
-          {# Daily Pies #}
-          {% if menu.blocks.dailyPies %}
-  
-          <div class="pie-box">
-            <h4 class="menu-title">Pie w/mash or salad + gravy</h4>
-            {{ getBlockElementsHtml(menu.blocks.dailyPies) }}
-          </div>
-          {% endif %}
-  
-          {# Sausage Rolls and Other #}
-          {% if menu.blocks.dailyRolls %}
-  
-          <div class="sausage-box">
-            <h4 class="menu-title">Sausage Rolls &amp; More</h4>
-            {{ getBlockElementsHtml(menu.blocks.dailyRolls) }}
-          </div>
-          {% endif %}
-  
-  
-          {# Sides #}
-          {% if menu.blocks.dailySides %}
-          <div class="sides-box">
-            <h4 class="menu-title">Awesome Sides</h4>
-            {{ getBlockElementsHtml(menu.blocks.dailySides) }}
-          </div>
-          {% endif %}
-  
-          {# Puds #}
-          {% if menu.blocks.dailyPuds %}
-          <div class="puds-box">
-            <h4 class="menu-title">Puds</h4>
-            {{ getBlockElementsHtml(menu.blocks.dailyPuds) }}
-          </div>
-          {% endif %}
-  
-  
-          {# Takeaway Pies #}
-          {% if menu.blocks.dailyTakeawayPies %}
-          <div class="takeaway-box">
-            <h4 class="menu-title">Takeaway Pies</h4>
-            {{ getBlockElementsHtml(menu.blocks.dailyTakeawayPies) }}
-          </div>
-          {% endif %}
-        </div>
-  
-        {% else %}
-        {# If no menus found, show default text element #}
-        <div class="menuBlurb"> {{ getBlockElementsHtml(page.blocks.defaultText) }}</div>
-        {% endfor %}
-        {# End Menu Loop #}
-  
- 
-</div>
-  </section>
+<section>
+  <div class="container">
+    <h1 class="element__title">Daily Menus</h1>
+    {# Menu page boilerplate intro text #}
+    <div class="menuBlurb"> {{ getBlockElementsHtml(page.blocks.menuText) }}</div>
+  </div>
+</section>
 
+<section>
+
+
+  {# Start menu loop #}
+
+  {# TODO: Convert to Twig Macro and reuse for dailyMenu.html and currentMenu.html templates #}
+
+<div class="container-wide">
+    <div class="menus-wrapper">
+      {% for menu in getActiveMenus(9) %}
+
+      <div class="menu-wrapper">
+        <h3 class="element__title span"> {{ menu.settings.pitchDate|date('j F Y') }} at {{ menu.settings.pitchLocation }} </h3>
+
+        {# Daily Pies #}
+        {% if menu.blocks.dailyPies %}
+  
+        <div class="pie-box">
+          <h4 class="menu-title">Pie w/mash or salad + gravy</h4>
+          {{ getBlockElementsHtml(menu.blocks.dailyPies) }}
+        </div>
+        {% endif %}
+  
+        {# Sausage Rolls and Other #}
+        {% if menu.blocks.dailyRolls %}
+  
+        <div class="sausage-box">
+          <h4 class="menu-title">Sausage Rolls &amp; More</h4>
+          {{ getBlockElementsHtml(menu.blocks.dailyRolls) }}
+        </div>
+        {% endif %}
+  
+  
+        {# Sides #}
+        {% if menu.blocks.dailySides %}
+        <div class="sides-box">
+          <h4 class="menu-title">Awesome Sides</h4>
+          {{ getBlockElementsHtml(menu.blocks.dailySides) }}
+        </div>
+        {% endif %}
+  
+        {# Puds #}
+        {% if menu.blocks.dailyPuds %}
+        <div class="puds-box">
+          <h4 class="menu-title">Puds</h4>
+          {{ getBlockElementsHtml(menu.blocks.dailyPuds) }}
+        </div>
+        {% endif %}
+  
+  
+        {# Takeaway Pies #}
+        {% if menu.blocks.dailyTakeawayPies %}
+        <div class="takeaway-box">
+          <h4 class="menu-title">Takeaway Pies</h4>
+          {{ getBlockElementsHtml(menu.blocks.dailyTakeawayPies) }}
+        </div>
+        {% endif %}
+      </div>
+  
+      {% else %}
+      {# If no menus found, show default text element #}
+      <div class="menuBlurb"> {{ getBlockElementsHtml(page.blocks.defaultText) }}</div>
+      {% endfor %}
+      {# End Menu Loop #}
+  
+  
+    </div>
 </div>
+</section>
+
 {% endblock body %}
