--- a/structure/templates/includes/_navbar.html
+++ b/structure/templates/includes/_navbar.html
@@ -1,11 +1,11 @@
 <header>
   <div class="logo">
     <a href="{{ pathFor('home') }}">
-      <img src="assets/img/svg/mypieLogo.svg" alt="{{ site.settings.siteName }}">
+      <img src="/assets/img/svg/mypieLogo.svg" alt="{{ site.settings.siteName }}">
     </a>
   </div>
 
-  <img class="inlineSVG headerSVG" src="assets/img/svg/happyHalfGuyLeaning.svg" alt="">
+  <img class="inlineSVG headerSVG" src="/assets/img/svg/happyHalfGuyLeaning.svg" alt="">
 
   <!-- <div class="controls">
     <a href="wholesale.html">Wholesale</a>
@@ -48,7 +48,7 @@
 
         {% endfor %}
       </ul>
-      <img class="inlineSVG navbarSVG" src="assets/img/svg/chicken1.svg" alt="">
+      <img class="inlineSVG navbarSVG" src="/assets/img/svg/chicken1.svg" alt="">
 </nav>
 </header>
 
