--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -251,6 +251,29 @@ section:last-of-type {
   margin-top: 2rem;
 }
 
+figure {
+  border-radius: var(--br);
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+figure img {
+  width: auto;
+  margin: auto;
+  height: auto;
+  max-height: 450px;
+  border-radius: var(--br);
+  box-shadow: var(--bs);
+  object-fit: contain;
+}
+figure figcaption {
+  color: var(--clr-dark);
+  font-size: 0.8rem;
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 0.25rem !important;
+  text-align: center;
+}
+
 .toggle {
   position: absolute;
   top: -999px !important;
@@ -487,6 +510,44 @@ header img {
   height: min(var(--hero-height), 1080px);
   object-fit: cover;
   z-index: 100;
+}
+
+#friendsCards .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-auto-rows: 1fr;
+  gap: 1rem;
+  list-style: none;
+}
+#friendsCards .card {
+  height: 100%;
+  background: white;
+  padding: 1rem;
+  border-radius: 4px;
+  box-shadow: 2px 2px 15px rgba(35, 31, 32, 0.15);
+  display: flex;
+  flex-flow: column nowrap;
+}
+#friendsCards .card__image {
+  max-height: 250px;
+  overflow: hidden;
+  border: solid 2px #cccccc;
+}
+#friendsCards .card__image img {
+  object-fit: contain;
+}
+#friendsCards .card__text {
+  margin-top: auto;
+  padding-top: 2rem;
+}
+#friendsCards .card__title {
+  padding-top: 2rem;
+}
+
+#friendsDetail .actionBlock {
+  padding-top: 2rem;
+  display: flex;
+  justify-content: space-around;
 }
 
 .contact-form {
