--- a/structure/templates/elements/collection/collection.html
+++ b/structure/templates/elements/collection/collection.html
@@ -4,37 +4,41 @@
 {% set collection = getCollectionPagesWithPagination(element.collection_id, 6) %}
 
 
-<div class="element">
-  <h2>{{ element.title }}</h2>
-  {{ element.content }}
+<section id="friends">
+  <div class="container">
+    <h2 class="element__title">{{ element.title }}</h2>
+    {{ element.content }}
+  </div>
+</section>
 
-  <ul class="cards">
-    {% for detail in collection %}
-    <a href="{{ pathFor('showPage', {'slug1': detail.collection_slug, 'slug2': detail.page_slug}) }}">
-      <li class="card">
+<section id="friendsCards">
+  <div class="container-wide">
 
+    <ul class="cards">
+      {% for detail in collection %}
+      <a href="{{ pathFor('showPage', {'slug1': detail.collection_slug, 'slug2': detail.page_slug}) }}">
 
-        {% if detail.media.filename %}
-        <div class="card__image">
-          <img src="{{ getMediaPath(detail.media.filename, 'thumb') }}">
-        </div>
-        {% endif %}
+        <li class="card">
+          {% if detail.media.filename %}
+          <div class="card__image">
+            <img src="{{ getMediaPath(detail.media.filename, 'thumb') }}">
+          </div>
+          {% endif %}
 
-        <div class="card__title">
-          <h3>{{ detail.title }}</h3>
-        </div>
-        <p class="card__text">
-          {{ detail.meta_description }}
-        </p>
+          <div class="card__title">
+            <h3 class="element__title">{{ detail.title }}</h3>
+          </div>
+          <p class="card__text">
+            {{ detail.meta_description }}
+          </p>
+    
+        </li>
+      </a>
 
+      {% endfor %}
+    </ul>
 
-
-      </li>
-    </a>
-
-    {% endfor %}
-  </ul>
-
-  {# Print pagination navigation #}
-  {{ pagination() }}
-</div>
+    {# Print pagination navigation #}
+    {{ pagination() }}
+  </div>
+</section>
