--- a/structure/templates/pages/collections/friends/friends.html
+++ b/structure/templates/pages/collections/friends/friends.html
@@ -2,23 +2,31 @@
 
 {% block body %}
 
+<section id="friendsDetail">
 
+<div class="container">
+    <figure class="image">
+      {{ getMediaSrcSet(page.media.filename, page.media.caption, {'sizes': '(min-width: 1020px) 926px, 93.43vw'}) }}
+    </figure>
 
-<section class="collectionDetail element">
+    <div class="collectionDetail__content">
+      
+      <h1 class="element__title">{{page.title }}</h1>
+      
+      {{ getBlockElementsHtml(page.blocks.contentBlock) }}
 
+     
+    
+    </div>
+    <div class="actionBlock">
+      <a href="{{ page.settings.url }}" target="_blank">Visit Site <i class="fas fa-external-link-alt"></i></a>
+      
+      <a href="/friends-of-mypie" class="btn">Return to Friends</a>
+    </div>
 
-  <figure class="image">
-    {{ getMediaSrcSet(page.media.filename, page.media.caption, {'sizes': '(min-width: 1020px) 926px, 93.43vw'}) }}
-  </figure>
+   
 
-  <div class="collectionDetail__content">
-    <h1>{{page.title }}</h1>
-    {{ getBlockElementsHtml(page.blocks.contentBlock) }}
-    <a href="{{ page.settings.url }}" target="_blank">Visit Site</a>
   </div>
-
-
-  <a href="/friends-of-mypie" class="btn btn-link">Return to Friends</a>
 
 </section>
 
