--- a/structure/sass/default/elements/_collection.scss
+++ b/structure/sass/default/elements/_collection.scss
@@ -2,7 +2,7 @@
 #friendsCards {
   .cards {
     display              : grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows       : 1fr;
 
     gap       : 1rem;
@@ -46,5 +46,12 @@
     @include padding(2rem null null);
     display: flex;
     justify-content: space-around;
+  }
+  figure {
+    background: $bg-grey;
+    @include padding(2rem 0);
+  }
+  .element__title {
+    @include margin(2rem null null null);
   }
 }
