--- a/structure/sass/default/elements/_hero.scss
+++ b/structure/sass/default/elements/_hero.scss
@@ -1,9 +1,24 @@
-// Hero style
+// Hero Element  
 .hero {
-  --hero-height: 65vh;
+  --hero-height: 80vh;
   height       : min(var(--hero-height), 1080px);
   position     : relative;
   z-index      : 100;
+
+  &__image {
+    width : 100vw;
+    height: min(var(--hero-height), 1080px);
+    position: relative;
+ 
+
+    img {
+      width : 100vw;
+      height : min(var(--hero-height), 1080px);
+      object-fit: cover;
+      z-index : 100;
+    
+    }
+  }
 
   &__overlay {
     position: absolute;
@@ -15,31 +30,75 @@
   }
   &__content {
     text-align: center;
-    position  : absolute;
-    top       : 50%;
-    left      : 50%;
-    transform : translate(-50%, -50%);
     color     : $text-light;
     @include padding(1rem 2rem);
     border-radius: $br;
-    width     : 60ch;
-    max-width : 50%;
+    width     : 100%;
+    max-width : 40ch;
+    font-size: 1.3rem;
+
+    position  : absolute;
+    top       : 50%;
+    left      : 50%;
     z-index   : 102;
+
+    transform : translate(-50%, -50%);
+ 
     &-title {
       color: $text-light;
     }
+  } 
+}
+
+// With Menu Widget
+
+.menuWidget {
+  @include padding(1rem);
+  width     : 100%;
+  background: $bg-light;
+  text-align: center;
+
+  position: absolute;
+  right   : 0;
+  top     : 0;
+  z-index : 102;
+
+  display        : flex;
+  gap            : 2rem;
+  flex-flow      : row wrap;
+  justify-content: center;
+  align-items    : center;
+
+  @media screen and (min-width: $breakpoint) {
+    width   : 25vw;
+
+    bottom  : 0;
+
+   flex-flow: column nowrap;
+   justify-content: flex-start;
   }
-
-  &__image {
-    width : 100vw;
-    height: min(var(--hero-height), 1080px);
-
-    img {
-      width : 100vw;
-      height : min(var(--hero-height), 1080px);
+  .actionBlock {
+    @include margin(.75rem null null null);
+    display        : flex;
+    justify-content: center;
+    gap            : 1.5rem;
+    i {
+      font-size: .75rem;
+    }
+  }
+}
+.menuWidget + .hero__image {
+  @media screen and (min-width: $breakpoint){
+    --hero-height: 65vh;
+    width: 75vw;
+    img{
+      width: 75vw;
       object-fit: cover;
-      z-index : 100;
     }
   }
 
 }
+
+
+
+ 
