--- a/structure/templates/includes/_menuWidget.html
+++ b/structure/templates/includes/_menuWidget.html
@@ -1,22 +1,20 @@
-<section id="menuWidget">
-  <div class="container">
-    <h2>MYPIE Truck Locations</h2>
-    <div class="menuWidget">
-      {# Start menu loop #}
-      {% for menu in getActiveMenus(9) %}
+{% for menu in getActiveMenus(9) %}
+<div class="menuWidget__item">
 
-      <div class="menuWidget__item">
-        <div class="menu-pitch"> {{ menu.settings.pitchLocation }} </div>
-        <div class="menu-date"> {{ menu.settings.pitchDate|date('j F Y') }}</div>
-        <div class="menu-map"><a href="https://goo.gl/maps/3HuKE8pnsJHy2Tx37" target="_blank">Find Us <i
-              class="fas fa-external-link-alt"></i></a></div>
-              <div class="menu-menu">
-                <a href="/menu">Menu</a>
-              </div>
+  <h4> {{ menu.settings.pitchDate|date('j F Y') }} - {{ menu.settings.pitchLocation }}</h4>
 
-      </div>
-      {% endfor %}
-      {# End Menu Loop #}
+  <div class="actionBlock">
+ 
+    <div class="locationURL">
+      <a href="{{ menu.settings.pitchLocationlink }}" target="_blank">Find Us <i
+          class="fas fa-external-link-alt"></i></a>
     </div>
+
+    <div class="dailyMenu">
+      <a href="/menu">Menu</a>
+    </div>
+
   </div>
-</section>
+
+</div>
+{% endfor %}
