tweaks to hamburger and navbar color

--- a/structure/sass/default/includes/_navbar.scss
+++ b/structure/sass/default/includes/_navbar.scss
@@ -2,7 +2,7 @@
 
 header {
   @include padding(1em null);
-  background: $clr-primary;
+  background: $clr-primary-dark;
   height: calc(#{$nav-height} + 4em);
   width: 100%;
 
