--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -294,10 +294,10 @@ figure figcaption {
 .toggle-label span,
 .toggle-label span::before,
 .toggle-label span::after {
-  width: 2.5em;
-  height: 5px;
+  width: 2em;
+  height: 3px;
   border-radius: 4px;
-  background: #231f20;
+  background: white;
   position: relative;
 }
 .toggle-label span::before,
@@ -315,8 +315,9 @@ figure figcaption {
 }
 
 .toggle:checked ~ .toggle-label {
+  border-radius: 50%;
   filter: drop-shadow(0 2px 2px rgba(35, 31, 32, 0.15));
-  background: rgba(126, 205, 201, 0.5);
+  background: rgba(126, 205, 201, 0.25);
   left: 33%;
 }
 
@@ -337,7 +338,7 @@ figure figcaption {
 header {
   padding-top: 1em;
   padding-bottom: 1em;
-  background: #7ecdc9;
+  background: #40a5a0;
   height: calc(60px + 4em);
   width: 100%;
   position: relative;
