--- a/structure/sass/default/includes/_hamburger.scss
+++ b/structure/sass/default/includes/_hamburger.scss
@@ -23,10 +23,10 @@
   span,
   span::before,
   span::after {
-    width        : 2.5em;
-    height       : 5px;
+    width        : 2em;
+    height       : 3px;
     border-radius: $br;
-    background   : $bg-dark;
+    background   : $bg-light;
    
     position: relative;
   }
@@ -54,8 +54,9 @@
 
 // Nav Toggle Animation
 .toggle:checked~.toggle-label {
+  border-radius: 50%;
   filter: drop-shadow(0 2px 2px rgba($bg-dark, .15));
-  background: rgba($clr-primary,.5);
+  background: rgba($clr-primary,.25);
   left: 33%;
 
 }
