--- a/structure/templates/elements/faq/faq.html
+++ b/structure/templates/elements/faq/faq.html
@@ -1,11 +1,12 @@
 {# Text Element #}
 
- <section>
-  <h2 class="element__title">{{ element.title }}</h2>
-    <div class="container-wide">
+
+
+   <section>
+    <div class="container">
      
   <div class="textElement">
-    
+    <h5 class="">{{ element.title }}</h5>
         {{ element.content }}
   </div>
     </div>
