--- a/structure/templates/elements/hero/hero.html
+++ b/structure/templates/elements/hero/hero.html
@@ -17,7 +17,8 @@
     {% endif %}
   </div>
   <div class="hero__overlay" {% if element.settings.overlay %}
-    style="background-color: rgba({{element.settings.overlayColor}},{{element.settings.overlay }}%)" {% endif %}>
+    style="background-color: rgba({{element.settings.overlayColor}},{{element.settings.overlay }}%)" 
+    {% endif %}>
   </div>
 
 </div>
