--- a/structure/sass/default/global/_base.scss
+++ b/structure/sass/default/global/_base.scss
@@ -18,15 +18,19 @@ html,
 body {
   width     : 100vw;
   height    : 100vh;
-  min-height: 100vh;
 }
 
 body {
+height: 100%;
   background : $bg-light;
   color      : $text-dark;
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color      : $text-dark;
 
   display  : flex;
   flex-flow: column nowrap;
@@ -34,29 +38,8 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  color      : $text-dark;
-}
-
 p {
-  margin-bottom: 1.2em;
   @include margin(1rem null null null);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family   : "franchise_freebold", sans-serif;
-  color         : $text-dark;
-  font-weight   : inherit;
-  line-height   : 1.2;
-  letter-spacing: .1em;
 }
 
 h1,
