--- a/structure/sass/default/global/_base.scss
+++ b/structure/sass/default/global/_base.scss
@@ -16,12 +16,13 @@ html {
 
 html,
 body {
-  width     : 100vw;
-  height    : 100vh;
+  width : 100vw;
+  height: 100vh;
 }
 
 body {
-height: 100%;
+  height     : auto;
+  min-height : 100vh;
   background : $bg-light;
   color      : $text-dark;
   font-family: 'Noto Sans JP', sans-serif;
@@ -236,10 +237,10 @@ figure {
   img {
     width: auto;
     @include margin(0 auto);
-    height       : auto;
-    max-height   : 350px;
-    border-radius: var(--br);
-    box-shadow   : var(--bs);
+    height          : auto;
+    max-height      : 350px;
+    border-radius   : var(--br);
+    box-shadow      : var(--bs);
     // object-fit   : contain;
   }
 
